# gh-review

./: .spr.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  justfile
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md  architecture.md
src/: app.rs  cli.rs  config.rs  dirs.rs  editor.rs  event.rs  gh.rs  highlight.rs  main.rs  search.rs  terminal.rs  theme.rs  types.rs
src/app/: actions.rs  command.rs  command_handlers.rs  custom_action.rs  handlers.rs  keymap.rs  mod.rs  ui.rs
src/components/: command_bar.rs  comment_input.rs  description_panel.rs  diff_view.rs  file_picker.rs  help.rs  mod.rs  review_bar.rs  review_confirm.rs  search_bar.rs  status_line.rs
src/components/diff_view/: comment_block.rs  draw.rs  mod.rs  navigation.rs
src/config/: README.md  example.config.toml  keys.rs  mod.rs  runtime.rs
src/diff/: expand.rs  layout.rs  mod.rs  model.rs  parser.rs  renderer.rs  suggestion.rs  wrap.rs
src/llm/: claude_cli.rs  mod.rs  prompt.rs
src/search/: mod.rs  tests.rs
src/stack/: graphite.rs  mod.rs
