[package]
name = "gh-review"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for reviewing GitHub pull requests"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-textarea = "0.7"
base64 = "0.22"
unicode-width = "0.2"
anyhow = "1"
