[package]
name = "gh-review"
version = "0.1.0"
edition = "2024"
description = "Terminal UI for reviewing GitHub pull requests"
license = "MIT"
repository = "https://github.com/Neville-Loh/gh-review"
homepage = "https://github.com/Neville-Loh/gh-review"
authors = ["Neville Loh"]
readme = "README.md"
keywords = ["github", "pull-request", "code-review", "tui", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-textarea = { package = "tui-textarea-2", version = "0.10" }
tui-markdown = "0.3"
base64 = "0.22"
unicode-width = "0.2"
anyhow = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
